# wildberries-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  tmp.py
.githooks/: pre-commit
.github/workflows/: publish.yml
wildberries_cli/: __init__.py  args.py  client.py  config.py  main.py  output.py  serialize.py
wildberries_cli/commands/: __init__.py  communications.py  config_cmd.py  general.py  orders_fbs.py  products.py  promotion.py  raw.py  reports.py  tariffs.py
