[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "wildberries-cli"
version = "0.1.0"
description = "Wildberries seller platform CLI powered by wildberries-sdk"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jamil Zakirov", email = "jamil@zakirov.com" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tomlkit>=0.13.0",
    "wildberries-sdk>=0.1.47",
]
keywords = ["wildberries", "cli", "marketplace"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/jzakirov/wildberries-cli"
Source = "https://github.com/jzakirov/wildberries-cli"
Issues = "https://github.com/jzakirov/wildberries-cli/issues"

[project.scripts]
wildberries = "wildberries_cli.main:app"

[tool.uv.build-backend]
module-name = "wildberries_cli"
module-root = ""

[dependency-groups]
dev = ["ruff>=0.9.0"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
